--- a/tests/GACore.DemoApp/GACore.DemoApp.csproj
+++ b/tests/GACore.DemoApp/GACore.DemoApp.csproj
@@ -6,6 +6,8 @@
 		<PlatformName>windows</PlatformName>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<UseWPF>true</UseWPF>
+		<ImplicitUsings>true</ImplicitUsings>
+		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
 	<ItemGroup>
