--- a/tests/GACore.Extensions.Test/GACore.Extensions.Test.csproj
+++ b/tests/GACore.Extensions.Test/GACore.Extensions.Test.csproj
@@ -11,6 +11,8 @@
 		<Copyright>Copyright ©  2019</Copyright>
 		<AssemblyVersion>1.0.0.0</AssemblyVersion>
 		<FileVersion>1.21.0.0</FileVersion>
+		<ImplicitUsings>true</ImplicitUsings>
+		<Nullable>enable</Nullable>
 	</PropertyGroup>
 	
 	<ItemGroup>
