--- a/tests/GACore.Test/GACore.Test.csproj
+++ b/tests/GACore.Test/GACore.Test.csproj
@@ -9,6 +9,8 @@
 		<AssemblyVersion>1.0.0.0</AssemblyVersion>
 		<FileVersion>1.21.0.0</FileVersion>
 		<PlatformName>windows</PlatformName>
+		<ImplicitUsings>true</ImplicitUsings>
+		<Nullable>enable</Nullable>
 	</PropertyGroup>
 	
 	<ItemGroup>
