--- a/tests/GACore.Extensions.Test/GACore.Extensions.Test.csproj
+++ b/tests/GACore.Extensions.Test/GACore.Extensions.Test.csproj
@@ -1,34 +1,24 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-	
+
 	<PropertyGroup>
 		<TargetFramework>net8.0-windows</TargetFramework>
-		<OutputType>Library</OutputType>
-		<PlatformName>windows</PlatformName>
-		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-		<UseWPF>true</UseWPF>
-		<AssemblyTitle>GACore.Extensions.Test</AssemblyTitle>
-		<Product>GACore.Extensions.Test</Product>
-		<Copyright>Copyright ©  2019</Copyright>
-		<AssemblyVersion>1.0.0.0</AssemblyVersion>
-		<FileVersion>1.21.0.0</FileVersion>
-		<ImplicitUsings>true</ImplicitUsings>
+		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
-	
+
 	<ItemGroup>
 		<ProjectReference Include="..\..\src\GACore.Extensions\GACore.Extensions.csproj" />
 		<ProjectReference Include="..\..\src\GACore\GACore.csproj" />
 	</ItemGroup>
-	
+
 	<ItemGroup>
-		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-		<PackageReference Include="NUnit">
-			<Version>4.0.1</Version>
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+		<PackageReference Include="NUnit" Version="4.0.1" />
+		<PackageReference Include="NUnit.Analyzers" Version="3.10.0">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="NUnit3TestAdapter">
-			<Version>4.5.0</Version>
-		</PackageReference>
-		<PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
+		<PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
 	</ItemGroup>
-	
+
 </Project>
