--- a/tests/GACore.Test/GACore.Test.csproj
+++ b/tests/GACore.Test/GACore.Test.csproj
@@ -2,14 +2,7 @@
 	
 	<PropertyGroup>
 		<TargetFramework>net8.0-windows</TargetFramework>
-		<OutputType>Library</OutputType>
-		<AssemblyTitle>GACore.Test</AssemblyTitle>
-		<Product>GACore.Test</Product>
-		<Copyright>Copyright ©  2023</Copyright>
-		<AssemblyVersion>1.0.0.0</AssemblyVersion>
-		<FileVersion>1.21.0.0</FileVersion>
-		<PlatformName>windows</PlatformName>
-		<ImplicitUsings>true</ImplicitUsings>
+		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 	
@@ -23,23 +16,13 @@
 			<Version>1.40.0</Version>
 		</PackageReference>
 		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-		<PackageReference Include="NLog">
-			<Version>5.2.7</Version>
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+		<PackageReference Include="NUnit" Version="4.0.1" />
+		<PackageReference Include="NUnit.Analyzers" Version="3.10.0">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="NUnit">
-			<Version>4.0.1</Version>
-		</PackageReference>
-		<PackageReference Include="NUnit3TestAdapter">
-			<Version>4.5.0</Version>
-		</PackageReference>
-		<PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
-		<PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
-		<PackageReference Include="System.ServiceModel.Primitives" Version="6.2.0" />
-		<PackageReference Include="System.ServiceModel.Http" Version="6.2.0" />
-		<PackageReference Include="System.ServiceModel.Duplex" Version="6.0.0" />
-		<PackageReference Include="System.ServiceModel.NetTcp" Version="6.2.0" />
-		<PackageReference Include="System.ServiceModel.Security" Version="6.0.0" />
-		<PackageReference Include="System.ServiceModel.Federation" Version="6.2.0" />
+		<PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
 	</ItemGroup>
 	
 </Project>
