--- a/src/GACore.Controls/GACore.Controls.csproj
+++ b/src/GACore.Controls/GACore.Controls.csproj
@@ -10,9 +10,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\GACore.Architecture\GACore.Architecture.csproj" />
-		<ProjectReference Include="..\GACore.Extensions\GACore.Extensions.csproj" />
-		<ProjectReference Include="..\GACore\GACore.csproj" />
+		<ProjectReference Include="..\GACore.Architecture\GACore.Architecture.csproj" PrivateAssets="all" />
+		<ProjectReference Include="..\GACore.Extensions\GACore.Extensions.csproj" PrivateAssets="all" />
+		<ProjectReference Include="..\GACore\GACore.csproj" PrivateAssets="all" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -42,7 +42,7 @@
 			<Version>4.5.1</Version>
 		</PackageReference>
 		<PackageReference Include="GAAPICommon">
-			<Version>1.40.0</Version>
+			<Version>1.41.0</Version>
 		</PackageReference>
 		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
 		<PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
