--- a/src/GACore.UI/GACore.UI.csproj
+++ b/src/GACore.UI/GACore.UI.csproj
@@ -7,13 +7,30 @@
 		<PlatformName>windows</PlatformName>
 		<ImplicitUsings>true</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<PackageId>GACore</PackageId>
+		<Version>2.7.0</Version>
+		<Authors>Martin Davies, Callum Clarke, Ollie Sharratt</Authors>
+		<Company>Guidance Automation Ltd</Company>
+		<PackageDescription>Core components for Guidance Automation assemblies.</PackageDescription>
+		<RepositoryUrl>https://github.com/GuidanceAutomation/GACore</RepositoryUrl>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 	
 	<ItemGroup>
-		<ProjectReference Include="..\GACore.Architecture\GACore.Architecture.csproj" />
-		<ProjectReference Include="..\GACore.Controls\GACore.Controls.csproj" />
-		<ProjectReference Include="..\GACore\GACore.csproj" />
+		<ProjectReference Include="..\GACore.Architecture\GACore.Architecture.csproj" PrivateAssets="all" />
+		<ProjectReference Include="..\GACore.Controls\GACore.Controls.csproj" PrivateAssets="all" />
+		<ProjectReference Include="..\GACore\GACore.csproj" PrivateAssets="all" />
 	</ItemGroup>
+	
+	<PropertyGroup>
+		<TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);CopyProjectReferencesToPackage</TargetsForTfmSpecificBuildOutput>
+	</PropertyGroup>
+	<Target DependsOnTargets="BuildOnlySettings;ResolveReferences" Name="CopyProjectReferencesToPackage">
+		<ItemGroup>
+			<BuildOutputInPackage Include="@(ReferenceCopyLocalPaths-&gt;WithMetadataValue('ReferenceSourceTarget', 'ProjectReference'))" />
+		</ItemGroup>
+	</Target>
 	
 	<ItemGroup>
 		<PackageReference Include="Extended.Wpf.Toolkit">
@@ -31,6 +48,14 @@
 		<PackageReference Include="System.ServiceModel.NetTcp" Version="6.2.0" />
 		<PackageReference Include="System.ServiceModel.Security" Version="6.0.0" />
 		<PackageReference Include="System.ServiceModel.Federation" Version="6.2.0" />
+	</ItemGroup>
+	
+	<ItemGroup>
+		<None Remove="README.md" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<None Include="..\..\README.md" Pack="true" PackagePath="" />
 	</ItemGroup>
 	
 </Project>
