--- a/src/GACore/GACore.csproj
+++ b/src/GACore/GACore.csproj
@@ -7,15 +7,16 @@
 		<PlatformName>windows</PlatformName>
 		<ImplicitUsings>true</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<AssemblyName>GACore.Core</AssemblyName>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\GACore.Architecture\GACore.Architecture.csproj" />
+		<ProjectReference Include="..\GACore.Architecture\GACore.Architecture.csproj" PrivateAssets="all" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="GAAPICommon">
-			<Version>1.40.0</Version>
+			<Version>1.41.0</Version>
 		</PackageReference>
 		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
 		<PackageReference Include="NLog">
