--- a/src/GACore.csproj
+++ b/src/GACore.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
-		<PackageVersion>3.0.0-alpha.1</PackageVersion>
+		<PackageVersion>3.0.0-alpha.2</PackageVersion>
 		<Platforms>x64</Platforms>
 		<ImplicitUsings>true</ImplicitUsings>
 		<Nullable>enable</Nullable>
@@ -18,17 +18,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-		<PackageReference Include="NLog" Version="5.2.8" />
-		<PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
-		<PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
-		<PackageReference Include="System.ServiceModel.Primitives" Version="8.0.0" />
-		<PackageReference Include="System.ServiceModel.Http" Version="8.0.0" />
-		<PackageReference Include="System.ServiceModel.Duplex" Version="6.0.0" />
-		<PackageReference Include="System.ServiceModel.NetTcp" Version="8.0.0" />
-		<PackageReference Include="System.ServiceModel.Security" Version="6.0.0" />
-		<PackageReference Include="System.ServiceModel.Federation" Version="8.0.0" />
-		<PackageReference Include="GAAPICommon" Version="2.0.0-alpha.1" />
+		<PackageReference Include="Microsoft.CSharp" Version="4.7.*" />
+		<PackageReference Include="NLog" Version="5.2.*" />
+		<PackageReference Include="System.Data.DataSetExtensions" Version="4.5.*" />
+		<PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.*" />
+		<PackageReference Include="GAAPICommon" Version="2.0.*-*" />
 		<None Include="..\README.md" Pack="true" PackagePath="\"/>
 	</ItemGroup>
 
