--- a/src/GACore.csproj
+++ b/src/GACore.csproj
@@ -22,8 +22,8 @@
 		<PackageReference Include="NLog" Version="5.2.*" />
 		<PackageReference Include="System.Data.DataSetExtensions" Version="4.5.*" />
 		<PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.*" />
-		<PackageReference Include="GAAPICommon" Version="2.0.*-*" />
-		<None Include="..\README.md" Pack="true" PackagePath="\"/>
+		<PackageReference Include="GAAPICommon" Version="2.0.0-alpha.5" />
+		<None Include="..\README.md" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
 </Project>
