--- a/src/GACore.csproj
+++ b/src/GACore.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
-		<PackageVersion>3.0.0-alpha.5</PackageVersion>
+		<PackageVersion>3.0.0-alpha.6</PackageVersion>
 		<Platforms>x64</Platforms>
 		<ImplicitUsings>true</ImplicitUsings>
 		<Nullable>enable</Nullable>
@@ -18,11 +18,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.CSharp" Version="4.7.*" />
 		<PackageReference Include="NLog" Version="5.2.*" />
-		<PackageReference Include="System.Data.DataSetExtensions" Version="4.5.*" />
-		<PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.*" />
-		<PackageReference Include="GAAPICommon" Version="2.0.0-alpha.6" />
+		<PackageReference Include="GAAPICommon" Version="2.0.*-*" />
 		<None Include="..\README.md" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
