--- a/src/GACore.csproj
+++ b/src/GACore.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
-		<PackageVersion>3.0.0-alpha.12</PackageVersion>
+		<PackageVersion>3.0.0-alpha.13</PackageVersion>
 		<Platforms>x64</Platforms>
 		<ImplicitUsings>true</ImplicitUsings>
 		<Nullable>enable</Nullable>
@@ -18,8 +18,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="NLog" Version="5.2.*" />
-		<PackageReference Include="GAAPICommon" Version="2.0.0-alpha.17" />
+		<PackageReference Include="NLog" Version="5.2.8" />
+		<PackageReference Include="GAAPICommon" Version="2.0.0-alpha.18" />
 		<None Include="..\README.md" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
