--- a/src/GACore.csproj
+++ b/src/GACore.csproj
@@ -18,7 +18,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="NLog" Version="5.3.2" />
+		<PackageReference Include="NLog" Version="5.3.*" />
 		<PackageReference Include="GAAPICommon" Version="2.0.*-*" />
 		<None Include="..\README.md" Pack="true" PackagePath="\" />
 	</ItemGroup>
