--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,5 +1,7 @@
 <Project>
 	<PropertyGroup>
+		<TargetFramework>net9.0</TargetFramework>
+		<PackageVersion>3.1.2</PackageVersion>
 		<UseArtifactsOutput>true</UseArtifactsOutput>
 	</PropertyGroup>
 </Project>
